[package]
name = "tiktokdownloader"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
yt-dlp = "1.3.4"
dirs = "6.0.0"       # For Linux, Windows, macOS
robius-directories = "5.0.1"  # For Android and cross-platform paths (supports BaseDirs, ProjectDirs)
uuid = { version = "1.8", features = ["v4"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11.8"
pretty_env_logger = "0.5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.12.23", features = ["multipart", "stream", "json", "rustls-tls"] }
zip = "5.1.1"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1.7"
sevenz-rust = "0.6.1"
grammers-client = "0.7.0"
grammers-session = "0.7.0"
grammers-tl-types = "0.7.0"
grammers-mtsender = "0.7.0"
tokio-util = { version = "0.7.16", features = ["io"] }
rand = { version = "0.9.2", features = ["os_rng"] }
rand_chacha = "0.9.0"
regex = "1.11.3"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
feed-rs = "2.3.1"
quick-xml = "0.38.3"
lru = "0.16.1"
futures = "0.3.31"
lazy_static = "1.5.0"


[dev-dependencies]
serial_test = "3.2.0"