[package]
name = "tiktokdownloader"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
robius-directories = "5.0.1"  # For Android and cross-platform paths (supports BaseDirs, ProjectDirs)
uuid = { version = "1.19.0", features = ["v4"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
dotenv = "0.15"
log = "0.4.29"
pretty_env_logger = "0.5"
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.12.28", features = ["multipart", "stream", "json", "rustls-tls"] }
zip = "7.0.0"
tar = "0.4"
xz2 = "0.1.7"
sevenz-rust2 = "0.20.0"
grammers-client = "0.7.0"
grammers-session = "0.7.0"
grammers-tl-types = "0.7.0"
tokio-util = { version = "0.7.18", features = ["io"] }
rand = { version = "0.9.2", features = ["os_rng"] }
rand_chacha = "0.9.0"
regex = "1.12.2"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.24.0"
feed-rs = "2.3.1"
lru = "0.16.2"
lazy_static = "1.5.0"


[dev-dependencies]
serial_test = "3.3.1"
