[package]
name = "tiktokdownloader"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.52.1", features = ["full"] }
robius-directories = "5.0.1"  # For Android and cross-platform paths (supports BaseDirs, ProjectDirs)
uuid = { version = "1.23.1", features = ["v4"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
dotenv = "0.15"
log = "0.4.29"
pretty_env_logger = "0.5"
chrono = { version = "0.4.44", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.13.2", features = ["multipart", "stream", "json", "rustls"] }
zip = "8.5.1"
tar = "0.4"
xz2 = "0.1.7"
sevenz-rust2 = "0.20.2"
grammers-client = { version = "0.9.0", features = ["markdown"] }
grammers-session = "0.9.0"
grammers-tl-types = "0.9.0"
tokio-util = { version = "0.7.18", features = ["io"] }
rand = { version = "0.10.1", features = ["sys_rng"] }
rand_chacha = "0.10.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
feed-rs = "2.3.1"
lru = "0.17.0"
lazy_static = "1.5.0"
grammers-mtsender = "0.9.0"


[dev-dependencies]
serial_test = "3.4.0"
